@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 Google Inc. All Rights Reserved.
+ * Copyright 2015 The Error Prone Authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -26,6 +26,6 @@ public class NullablePrimitiveNegativeCases {
 
   @Nullable
   public Integer method() {
-    return new Integer(0);
+    return Integer.valueOf(0);
   }
 }
